# The_final_project_of_the_web_server_course

./: Cargo.toml  users.db
src/: app.rs  main.rs
src/db/: mod.rs
src/error/: api_error.rs
src/handlers/: user_handlers.rs
src/middleware/: auth.rs
src/models/: user.rs
src/response/: wrapper.rs
src/routes/: user_routes.rs
