[package]
name = "The_final_project_of_the_web_server_course"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
#optional but useful
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = "0.14"